test/samples/invalid/resolving/arg_repeat.maruir
fun foo(a: u8, a:i16)
